--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--    </ul>-->
 				<ul class="graid3-ul">
 					<li class="graid3-li">
-						Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.
+						Research Intern, Applied AI Lab, Horizon Robotics, Silicon Valley.
 						<br>
 						<em>May-August, 2020.</em> Mentor: Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
 					</li>
