--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--		<a href="https://clustrmaps.com/site/1bca3" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU&co=2d78ad&ct=ffffff" /></a>-->
 <!--	</center>-->
 
-		<div class="footer">
-			<p>© Jialian Wu | Last updated: Dec. 2020 </p>
+		<div class="footer" style="color:white;">
+			The only way to live is by accepting each minute as an unrepeatable miracle - Storm Jameson
 		</div>
 	</div>
 	
