--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
 					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/abs/2008.05676">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676.pdf">PDF</a>
 						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 					  </div>
 					</div>
@@ -244,7 +244,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
-						  <a class="btn btn-confirm" target="_blank">Coming soon</a>
+						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>
 					  </div>
 					</div>
 				</div>
