--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--	</center>-->
 
 		<div class="footer" style="color:white;">
-			The only way to live is by accepting each minute as an unrepeatable miracle - Storm Jameson
+			The only way to live is by accepting each minute as an unrepeatable miracle
 		</div>
 	</div>
 	
