--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I studied towards M.Eng. at Tianjin University during 2018-2019 and left for UB in 2019 before finishing my degree.
-						I received B.Eng. from Tianjin University in 2018. I had a great research time at Horizon Robotics working with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>
-						and Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
-						My current research interest is object-centric video analysis including detection, segmentatoin, and tracking.
+						I received B.Eng. from Tianjin University in 2018. My current research interest is object-centric video analysis including detection, segmentatoin, and tracking.
 <!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
 <!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
 <!--						</li>-->
@@ -283,12 +281,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Research Intern, Applied AI Lab, Horizon Robotics, Silicon Valley.
 						<br>
-						<em>May-August, 2020.</em> Mentor: Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
+						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
 					<li class="graid3-li">
 						Research Intern, Horizon Robotics, Beijing.
 						<br>
-						<em>May-August, 2018.</em> Mentor: Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
+						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
 				</ul>
 			</div>
