--- a/index.html
+++ b/index.html
@@ -352,6 +352,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</ul>
 				<ul class="graid3-ul">
 					<li class="graid3-li">
+						Outstanding Bachelor Thesis, Tianjin University, 2018.
+					</li>
+				</ul>
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						First-class Entrance Fellowship, Tianjin University, 2018.
+					</li>
+				</ul>
+				<ul class="graid3-ul">
+					<li class="graid3-li">
 						Tianjin City Fellowship, 2016.
 					</li>
 				</ul>
