--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
 				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
 <!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
-				[<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]
+				<!-- [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>] -->
 			</p>
   </div>
 </div>
