--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
-						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>
+<!--						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
+							<a class="btn btn-confirm" target="_blank" href="./papers/aaai21.pdf">PDF</a>
 					  </div>
 					</div>
 				</div>
