--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
 <!--						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
-							<a class="btn btn-confirm" target="_blank" href="./papers/aaai21.pdf">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>
 					  </div>
 					</div>
 				</div>
