--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- </p> -->
 			</div>
 			<div class="grid3-content">
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+						<img class="paper-image" src="images/cvpr21.png">
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Track to Detect and Segment: An Online Multi-Object Tracker</div>
+						<div class='paper-authors'><b>Jialian Wu</b>, Jiale Cao, Liangchen Song, Yu Wang, Ming Yang, and Junsong Yuan</div>
+						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021.</div>
+						<div class='paper-link'>
+<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>-->
+							 <a class="btn btn-confirm" target="_blank">Coming soon</a>
+<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
+						</div>
+					</div>
+				</div>
+
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
 					  <img class="paper-image" src="images/cvpr20.png">
@@ -206,6 +223,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  </div>
 					</div>
 				</div>
+
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
 					  <img class="paper-image" src="images/Forest_Rcnn.png">
@@ -282,6 +300,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--         </li>-->
 <!--    </ul>-->
 				<ul class="graid3-ul">
+					<li class="graid3-li">
+						Prospective Applied Scientist Intern, Amazon GO, Seattle.
+						<br>
+						<em>May-August, 2021.</em>
+<!--						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a>.-->
+					</li>
 					<li class="graid3-li">
 						Research Intern, Applied AI Lab, Horizon Robotics, Silicon Valley.
 						<br>
