--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Journal Reviewer
 						<br>
-						IEEE Transactions on Image Processing
+						IEEE Transactions on Image Processing, IEEE Transactions on Circuits and Systems for
+						Video Technology
 
 					</li>
 				</ul>
