--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021.</div>
 						<div class='paper-link'>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>-->
-							 <a class="btn btn-confirm" target="_blank">Paper and codes will be available soon</a>
+<!--							 <a class="btn btn-confirm" target="_blank">Paper and codes will be available soon</a>-->
+							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
 						</div>
 					</div>
