--- a/projects/TraDeS.html
+++ b/projects/TraDeS.html
@@ -4,7 +4,7 @@
 <title>Track to Detect and Segment: An Online Multi-Object Tracker</title>
 <meta name="description" content="Deep Plastic Surgery">
 <meta name="author" content="Jialian Wu">
-	<link rel="shortcut icon" href="images/ub.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../images/ub.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/project.css">
 </head>
 	<script> 
