--- a/projects/TraDeS.html
+++ b/projects/TraDeS.html
@@ -19,7 +19,7 @@
   
 	<div class="content"><br>
 		<div class="title">
-			<h1>Track to Detect and Segment: An Online Multi-Object Tracker</h1>
+			<h1>Track to Detect and Segment: An Online Multi-Object Tracker </h1>
 		</div>
 		<div class="authors" style="width:95%">
 			<div class='author'>
@@ -47,8 +47,7 @@
 		</div>
 
 		<div class="video" style="width:95%">
-<!--			<iframe width="560" height="315" src="https://www.youtube.com/embed/ru0K8uYEZWw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-<!--			<iframe width="560" height="315" src="https://www.youtube.com/embed/DjmS-JoWzIw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+			<iframe width="600" height="340" src="https://www.youtube.com/embed/oGNtSFHRZJA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
 		<div class="papercode" style="width:95%">
@@ -102,6 +101,10 @@
 		<div class="experiments_sec">
 			<h2>Selected Results</h2>
 			<div id="images">
+				<img src="TraDeS/figs/mot.png" alt="" width="100%" >
+				<br>
+				<img src="TraDeS/figs/nuscenes.png" alt="" width="100%" >
+				<br>
 				<img src="TraDeS/figs/results.png" alt="" width="100%" >
 <!--				<P style="text-align: justify">Figure 3. Comparison with state-of-the-art methods on face edting. (a) Input photos, masks and sketches. (b) DeepFillv2 [1]. (c) SC-FEGAN [2].  (d) Our results with <em>l</em>=0. (e) Our results with <em>l</em>=1. (f) SC-FEGAN using our refined sketches as input.</P>-->
 			</div>
@@ -112,16 +115,16 @@
 			
 		</div>
 		
-		<div class="reference_sec">
-		<h2>Reference</h2>
-		  <div class="bib" style="text-align: justify">
-<!--		    <p>[1] J. Yu, Z. Lin, J. Yang, X. Shen, X. Lu, T.S. Huang. Free-form image inpainting with gated convolution. ICCV 2019.</p>-->
-<!--		    <p>[2] Y. Jo, J. Park. SC-FEGAN: Face editing generative adversarial network with user’s sketch and color. ICCV 2019.</p>-->
-<!--		  	<p>[3] J.Y. Zhu, R. Zhang, D. Pathak, T. Darrell, A.A. Efros, O. Wang, E. Shechtman. Toward multimodal image-to-image translation. NeurIPS 2017.</p>-->
-<!--			<p>[4] T.C. Wang, M.Y. Liu, J.Y. Zhu, A. Tao, J. Kautz, B. Catanzaro. High-resolution image synthesis and semantic manipulation with conditional GANs. CVPR 2018.</p>-->
-<!--			<p>[5] P. Isola, J.Y. Zhu, T. Zhou, A.A. Efros. Image-to-image translation with conditional adversarial networks. CVPR 2017.</p>-->
-		  </div>
-	</div>
+<!--		<div class="reference_sec">-->
+<!--		<h2>Reference</h2>-->
+<!--		  <div class="bib" style="text-align: justify">-->
+<!--&lt;!&ndash;		    <p>[1] J. Yu, Z. Lin, J. Yang, X. Shen, X. Lu, T.S. Huang. Free-form image inpainting with gated convolution. ICCV 2019.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;		    <p>[2] Y. Jo, J. Park. SC-FEGAN: Face editing generative adversarial network with user’s sketch and color. ICCV 2019.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;		  	<p>[3] J.Y. Zhu, R. Zhang, D. Pathak, T. Darrell, A.A. Efros, O. Wang, E. Shechtman. Toward multimodal image-to-image translation. NeurIPS 2017.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;			<p>[4] T.C. Wang, M.Y. Liu, J.Y. Zhu, A. Tao, J. Kautz, B. Catanzaro. High-resolution image synthesis and semantic manipulation with conditional GANs. CVPR 2018.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;			<p>[5] P. Isola, J.Y. Zhu, T. Zhou, A.A. Efros. Image-to-image translation with conditional adversarial networks. CVPR 2017.</p>&ndash;&gt;-->
+<!--		  </div>-->
+<!--	</div>-->
 		
 		
 		<br></br> 
