--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-						<img class="paper-image" src="images/cvpr21.png">
+						<img class="paper-image" style="width: 93%" src="images/TraDeS.gif">
 					</div>
 					<div class='col-xs-9'>
 						<div class='paper-title'>Track to Detect and Segment: An Online Multi-Object Tracker</div>
