--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
 					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
 						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 					  </div>
 					</div>
