--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br>
 				State University of New York at Buffalo
 				<br>
-				jialianw at buffalo dot edu
+				Email: jialianw at buffalo dot edu
+				<br>
+				Wechat: 710822906
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
