--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
     <img src="./images/jialian.jpg">
+<!--	  <img src="./images/Jialian_Wu.jpeg" style="width: 50%">-->
 
   </div>
   <div class="text">
