--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="content">
 		<div class="container">
   <div class="image">
-    <img src="./images/jialian.jpg">
-<!--	  <img src="./images/Jialian_Wu.jpeg" style="width: 50%">-->
+<!--    <img src="./images/jialian.jpg">-->
+	  <img src="./images/Jialian_Wu.jpeg" style="width: 50%">
 
   </div>
   <div class="text">
