--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br>
 				State University of New York at Buffalo
 				<br>
-				Email: jialianw at buffalo dot edu
-				<br>
-				Wechat: 710822906
+				jialianw at buffalo dot edu
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
@@ -415,6 +413,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="footer" style="color:white;">
 			The only way to live is by accepting each minute as an unrepeatable miracle
+			<br>
+			Email: jialianw at buffalo dot edu; Wechat: 710822906
 		</div>
 	</div>
 	
