--- a/projects/TraDeS.html
+++ b/projects/TraDeS.html
@@ -131,7 +131,7 @@
 		<p class="banner"align="center">Return to <a href="https://jialianwu.com/">Homepage</a></p>
 
 
-		<p class="banner"align="center">Powered by <a href="https://williamyang1991.github.io/">Shuai Yang</a></p>
+<!--		<p class="banner"align="center">Powered by <a href="https://williamyang1991.github.io/">Shuai Yang</a></p>-->
   </div>
 </div>
 </body>
