--- a/projects/TraDeS.html
+++ b/projects/TraDeS.html
@@ -51,13 +51,13 @@
 		</div>
 
 		<div class="papercode" style="width:95%">
-			Paper and code will be available soon
+			Paper will be available soon
 			<br>
 			<div class='paper'>
 			<a target="_blank"  ><img src="../images/pdf.png"  title="name" style="width:4%;vertical-align:middle;padding: 0 5px 10px 0"/>Paper</a>
 			</div>
 			<div class='paper'>
-			<a target="_blank" ><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code</a>
+			<a target="_blank" href="https://github.com/JialianW/TraDeS"><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code</a>
 			</div>
 		</div>
 
