--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-link'>
 						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>
 						<!-- <a class="btn btn-confirm" target="_blank" href="https://github.com/NVlabs/ASG">Code</a> -->
-						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>
+						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">Supp</a>
 					  </div>
 					</div>
 				</div>
@@ -253,7 +253,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
 						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>
+						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">Supp</a>
 					  </div>
 					</div>
 				</div>
