--- a/projects/TraDeS.html
+++ b/projects/TraDeS.html
@@ -58,6 +58,9 @@
 			<div class='paper'>
 			<a target="_blank" href="https://github.com/JialianW/TraDeS"><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code</a>
 			</div>
+			<div class='paper'>
+				<a target="_blank" href="https://www.bilibili.com/video/BV12U4y1p7wg"><img src="../images/bilibili.jpg" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>bilibili</a>
+			</div>
 		</div>
 
 		<div class="abstract_sec">
