--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-						Before that, I studied towards M.Eng. at Tianjin University during 2018-2019 and left for UB in 2019 before finishing my degree.
-						I received B.Eng. from Tianjin University in 2018. My current research interest is object-centric video analysis including detection, segmentation, and tracking.
+						Before that, I was a M.Eng. student at Tianjin University during 2018-2019 and left for UB before finishing the degree.
+						I received B.Eng. from Tianjin University in 2018. My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
 <!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
 <!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
 <!--						</li>-->
