--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--	</center>-->
 
 		<div class="footer" style="color:white;">
-			The only way to live is by accepting each minute as an unrepeatable miracle
+<!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
+			Every man has two lives - the second starts when he realizes he has just one
 			<br>
 			Email: jialianw at buffalo dot edu; Wechat: 710822906
 		</div>
