--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="grid3" id="experience" style="background:#ffffff">
 			<div class="grid3-header" id="experience">
-				<h3>Research Experience</h3>
+				<h3>Internships</h3>
 				<br/>
 			</div>		
 			<div class="grid3-content">
@@ -357,7 +357,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR'21'20, ICCV'21, AAAI'21, IJCAI'21, ACCV'20, WACV'21,
+						CVPR 2020/2021, ICCV 2021, AAAI 2021, IJCAI 2021, WACV 2021 ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
