--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						Prospective Applied Scientist Intern, Amazon GO, Seattle.
 						<br>
 						<em>May-August, 2021.</em>
-<!--						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a>.-->
+						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
 					<li class="graid3-li">
 						Research Intern, Applied AI Lab, Horizon Robotics, Silicon Valley.
