--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="footer" style="color:white;">
 <!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
-			Every man has two lives - the second starts when he realizes he has just one
-			<br>
-			Email: jialianw at buffalo dot edu; Wechat: 710822906
+<!--			Every man has two lives - the second starts when he realizes he has just one-->
+		Besides research, music is the best hobby of mine. Some favorite bands/musicians: <a href="https://en.wikipedia.org/wiki/AC/DC">AC/DC</a>, <a href="https://en.wikipedia.org/wiki/The_Beatles">The Beatles</a>,
+			<a href="https://ja.wikipedia.org/wiki/%E6%8A%BC%E5%B0%BE%E3%82%B3%E3%83%BC%E3%82%BF%E3%83%AD%E3%83%BC">Kotaro Oshio</a>
 		</div>
 	</div>
 	
