--- a/index.html
+++ b/index.html
@@ -90,30 +90,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   </div>
 </div>
 
+		
 
-<!--		<div class="grid1" id="me">-->
-<!--			<h3>Jialian Wu</h3>-->
-<!--			<br>-->
-<!--			<p>-->
-<!--				Ph.D. Candidate-->
-<!--				<br>-->
-<!--				State University of New York at Buffalo-->
-<!--				<br>-->
-<!--				jialianw at buffalo dot edu-->
-<!--			</p>-->
-<!--			<p style="padding: 10px 0px 0px 0px;">-->
-<!--&lt;!&ndash;				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>&ndash;&gt;-->
-<!--&lt;!&ndash;				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>&ndash;&gt;-->
-<!--				&lt;!&ndash; <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> &ndash;&gt;-->
-<!--				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]-->
-<!--				[<a href="https://drive.google.com/file/d/1Tp7hLu1LOSbvv7rimGRlCaViEG7mMrpu/view?usp=sharing">Curriculum Vitae</a>]-->
-<!--			</p>-->
-
-<!--			<div class="welcome-photo">-->
-<!--				<img src="./images/jialian.jpg" title="name" />-->
-<!--				&lt;!&ndash; <a class="welcome-photo1"><img id="me1" src="./images/Wuyang_Chen.png" title="name" /></a> &ndash;&gt;-->
-<!--			</div>-->
-<!--		</div>-->
 
 <!--		<embed src="C:\\CloudMusic\\demo.mp3" hidden="false" autostart="true" loop="true"><\embed>-->
 
@@ -129,67 +107,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I was a M.Eng. student at Tianjin University during 2018-2019 and left for UB before finishing the degree.
 						I received B.Eng. from Tianjin University in 2018. My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
-<!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
-<!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
-<!--						</li>-->
-<!--						<li class="graid3-li"> M.S. study, Tianjin Univeristy, 2018-2019 (drop)-->
-<!--						</li>-->
-<!--						<li class="graid3-li"> B.Eng. Degree, Tianjin University, 2014-2018</li>-->
-<!--						</li>-->
+
 					</ul>
 			</div>
 		</div>
 
-<!--		<div class="grid3" id="research" style="background:#ffffff">-->
-<!--			&lt;!&ndash; <h3>Research</h3> &ndash;&gt;-->
-<!--			<div class="grid3-header">-->
-<!--				<h3>Research Interest</h3>-->
-<!--				<br/>-->
-<!--			</div>-->
-<!--			&lt;!&ndash; <p>My interest mainly lies in low-level image processing, including:</p> &ndash;&gt;-->
-<!--			<div class="grid3-content">-->
-<!--				<div class="grid3-content">-->
-<!--					<ul class="graid3-ul">-->
-<!--						<li class="graid3-li"> Neural Architecture Search </li>-->
-<!--						<li class="graid3-li"> Self-supervised Learning </li>-->
-<!--					</ul>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--
-			<ul>
-				<li>
-					<img src="./images/segmentation.png" title="Artdirector" />
-					<a>Semantic Segmentation</a>
-				</li>			
-				<li>
-					<img src="./images/nas.png" title="Artdirector" />
-					<a>Neural Architecture Search</a>
-				</li>
-				<li>
-					<img src="./images/efficiency.png" title="Artdirector" />
-					<a>Model Efficiency</a>
-				</li>
-				<li>
-					<img src="./images/domain_transfer.png" title="Artdirector" />
-					<a>Domain Generalization</a>
-				</li>
-				<li>
-					<img src="./images/self-supervised.png" title="Artdirector" />
-					<a>Self-supervided Learning</a>
-				</li>
-			</ul>
--->
 			<p></p>
-			<!-- <p>My research projects are available at my <a class="grid2-herf" href="project.html">project page</a>.</p> -->
 		</div>
 
 		<div class="grid3" id="publication">
 			<div class="grid3-header">
 				<h3>Publications</h3>
-				<!-- <p>For full publication list, please visit my  -->
-				<!-- <a class="grid2-herf"  href="publication.html">publication page</a> or -->
-				<!-- <a class="grid2-herf"  target="_blank"  href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en">google scholar</a> -->
-				<!-- </p> -->
 			</div>
 			<div class="grid3-content">
 
@@ -202,8 +130,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-authors'><b>Jialian Wu</b>, Jiale Cao, Liangchen Song, Yu Wang, Ming Yang, and Junsong Yuan</div>
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021.</div>
 						<div class='paper-link'>
-<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>-->
-<!--							 <a class="btn btn-confirm" target="_blank">Paper and codes will be available soon</a>-->
 							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2103.08808.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>
@@ -222,7 +148,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020.</div>
 					  <div class='paper-link'>
 						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>
-						<!-- <a class="btn btn-confirm" target="_blank" href="https://github.com/NVlabs/ASG">Code</a> -->
 						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">Supp</a>
 					  </div>
 					</div>
@@ -267,14 +192,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
-<!--						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
 							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>
 					  </div>
 					</div>
 				</div>
-
-
-
 
 
 			</div>			
@@ -288,24 +209,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>		
 			<div class="grid3-content">
 
-<!--    <ul style="list-style-type:none">-->
-<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--              <strong> Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.</strong> <br> </font> </p>-->
-<!--	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--		 <em>May-August, 2020.</em> Mentor: <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.-->
-<!--	      </font> </p>-->
-<!--         </li>-->
-
-<!--		<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--              <strong> Research Intern, Horizon Robotics, Beijing.</strong> <br> </font> </p>-->
-<!--	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--		 <em>May-August, 2018.</em> Mentor: <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.-->
-<!--	      </font> </p>-->
-<!--         </li>-->
-<!--    </ul>-->
 				<ul class="graid3-ul">
 					<li class="graid3-li">
-						Prospective Applied Scientist Intern, Amazon GO, Seattle.
+						Applied Scientist Intern, Amazon GO, Seattle.
 						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
@@ -321,13 +227,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
 				</ul>
 			</div>
-		</div>		
-		<!-- <div class="grid2" id="contact">
-			<h3>Contact</h3>	
-			<div class="grid2-content">
-				<p>Email: williamyang AT pku.edu.com</p>			
-			</div>			
-		</div> -->
+		</div>
 
 				<div class="grid3" id="Professional_Activities" style="background:#ffffff">
 			<div class="grid3-header" id="Professional_Activities">
@@ -335,22 +235,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>
 			<div class="grid3-content">
-<!--<ul style="list-style-type:none">-->
-
-<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--              <strong> Conference Reviewer </strong> <br> </font> </p>-->
-<!--	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--		 CVPR 2020, WACV 2021, ACCV 2020-->
-<!--	      </font> </p>-->
-<!--         </li>-->
-
-<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--              <strong> Journal Reviewer </strong> <br> </font> </p>-->
-<!--	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
-<!--		 IEEE Transactions on Image Processing-->
-<!--	      </font> </p>-->
-<!--         </li>-->
-<!--				</ul>-->
 
 				<ul class="graid3-ul">
 					<li class="graid3-li">
@@ -403,14 +287,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<center>
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?&w=150&t=n&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>
 		</center>
-
-<!--		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>-->
-<!--		<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5i2hthx26xw&amp;m=8&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script>-->
-<!--		<script type="text/javascript"  src="//cdn.clustrmaps.com/globe.js?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU" async="async"></script>-->
-
-<!--		<center>-->
-<!--		<a href="https://clustrmaps.com/site/1bca3" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU&co=2d78ad&ct=ffffff" /></a>-->
-<!--	</center>-->
 
 		<div class="footer" style="color:white;">
 <!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
