--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
 <!--    <img src="./images/jialian.jpg">-->
-	  <img src="./images/Jialian_Wu.jpeg" style="width: 50%">
+	  <img src="./images/IMG-6659.JPG" style="width: 100%">
 
   </div>
   <div class="text">
