--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
 <!--    <img src="./images/jialian.jpg">-->
-	  <img src="./images/IMG-6659.JPG" style="width: 100%">
+	  <img src="./images/IMG-6660.JPG" style="width: 100%">
 
   </div>
   <div class="text">
@@ -131,7 +131,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021.</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
-							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2103.08808.pdf">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wu_Track_To_Detect_and_Segment_An_Online_Multi-Object_Tracker_CVPR_2021_paper.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
 						</div>
