--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<link href="./css/bootstrap.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href="./css/style.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href="./css/prettyPhoto.css" rel="stylesheet" type="text/css"  media="all" />		
-		<link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>	
+		<link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+		<!-- Place this tag in your head or just before your close body tag. -->
+		<script async defer src="https://buttons.github.io/buttons.js" ></script>
 	</head>
 	<body>
 		<!---start-wrap--->
@@ -133,6 +135,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wu_Track_To_Detect_and_Segment_An_Online_Multi-Object_Tracker_CVPR_2021_paper.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>
+							<!-- Place this tag where you want the button to render. -->
+							<!-- Place this tag where you want the button to render. -->
+							<!-- Place this tag where you want the button to render. -->
+							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
 						</div>
 					</div>
@@ -164,6 +170,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-link'>
 						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
 						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
+						  <!-- Place this tag where you want the button to render. -->
+						  <a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>
 					  </div>
 					</div>
 				</div>
