--- a/index.html
+++ b/index.html
@@ -193,6 +193,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
+						<img class="paper-image" src="images/mm21.png" width="300" height="130">
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Handling Difficult Labels for Multi-label Image Classification via Uncertainty Distillation</div>
+						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+						<div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2021.</div>
+<!--						<div class='paper-link'>-->
+<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
+<!--						</div>-->
+					</div>
+				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
 					  <img class="paper-image" src="images/aaai21.png" width="300" height="130">
 					</div>
 					<div class='col-xs-9'>
