--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-						Before that, I was a M.Eng. student at Tianjin University during 2018-2019 and left for UB before finishing the degree.
-						I received B.Eng. from Tianjin University in 2018. My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
+						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
+						I've received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
+						My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
 
 					</ul>
 			</div>
