--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="footer" style="color:white;">
 <!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
 <!--			Every man has two lives - the second starts when he realizes he has just one-->
-		Besides research, music is the best hobby of mine. Favorite singers/bands/musicians: <a href="https://en.wikipedia.org/wiki/Jakob_Dylan">Jakob Dylan</a>, <a href="https://en.wikipedia.org/wiki/AC/DC">AC/DC</a>, <a href="https://en.wikipedia.org/wiki/The_Beatles">The Beatles</a>,
-			<a href="https://ja.wikipedia.org/wiki/%E6%8A%BC%E5%B0%BE%E3%82%B3%E3%83%BC%E3%82%BF%E3%83%AD%E3%83%BC">Kotaro Oshio</a>, <a href="https://en.wikipedia.org/wiki/Coldplay">Coldplay</a>, and more ...
+		Music is a great passion of my life:) Favorite singers/bands/musicians: <a href="https://en.wikipedia.org/wiki/Jakob_Dylan">Jakob Dylan</a>, <a href="https://en.wikipedia.org/wiki/AC/DC">AC/DC</a>, <a href="https://en.wikipedia.org/wiki/The_Beatles">The Beatles</a>,
+			<a href="https://ja.wikipedia.org/wiki/%E6%8A%BC%E5%B0%BE%E3%82%B3%E3%83%BC%E3%82%BF%E3%83%AD%E3%83%BC">Kotaro Oshio</a>, <a href="https://en.wikipedia.org/wiki/Coldplay">Coldplay</a>, <a href="https://en.wikipedia.org/wiki/The_Lumineers">The Lumineers</a>, and more ...
 		</div>
 	</div>
 	
