--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class='col-xs-9'>
 						<div class='paper-title'>Track to Detect and Segment: An Online Multi-Object Tracker</div>
 						<div class='paper-authors'><b>Jialian Wu</b>, Jiale Cao, Liangchen Song, Yu Wang, Ming Yang, and Junsong Yuan</div>
-						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021.</div>
+						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wu_Track_To_Detect_and_Segment_An_Online_Multi-Object_Tracker_CVPR_2021_paper.pdf">PDF</a>
@@ -192,6 +192,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+						<img class="paper-image" src="images/iccv21.png" width="300" height="130">
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Stacked Homography Transformations for Multi-View Pedestrian Detection</div>
+						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+						<div class='paper-venue'>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 (<b style="color:red;">Oral</b>).</div>
+						<!--						<div class='paper-link'>-->
+						<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
+						<!--						</div>-->
+					</div>
+				</div>
+
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
 						<img class="paper-image" src="images/mm21.png" width="300" height="130">
@@ -200,26 +215,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-title'>Handling Difficult Labels for Multi-label Image Classification via Uncertainty Distillation</div>
 						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 						<div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2021.</div>
-<!--						<div class='paper-link'>-->
-<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
-<!--						</div>-->
+						<!--						<div class='paper-link'>-->
+						<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
+						<!--						</div>-->
 					</div>
 				</div>
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/aaai21.png" width="300" height="130">
+						<img class="paper-image" src="images/aaai21.png" width="300" height="130">
 					</div>
 					<div class='col-xs-9'>
-					  <div class='paper-title'>Robust Knowledge Transfer via Hybrid Forward on the Teacher-Student Model</div>
-					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
-					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
+						<div class='paper-title'>Robust Knowledge Transfer via Hybrid Forward on the Teacher-Student Model</div>
+						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+						<div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>
-					  </div>
+						</div>
 					</div>
 				</div>
-
 
 			</div>			
 		</div>
